<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/mobile_navigation"-->
<!--    app:startDestination="@+id/navigation_home">-->

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:layout="@layout/activity_home"
        android:title="@string/Home"/>

    <item
        android:id="@+id/navigation_info"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_info_24"
        android:layout="@layout/activity_info"
        android:title="@string/Info"/>

    <item
        android:id="@+id/navigation_chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:layout="@layout/activity_info"
        android:title="Функции" />

    <item
        android:id="@+id/navigation_gallery"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_insert_photo_24"
        android:layout="@layout/activity_cage"
        android:title="@string/Gallery" />

    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:layout="@layout/activity_info"
        android:title="@string/Settings" />

</menu>