<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recycling.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:layout_gravity="center"
            android:layout_margin="10dp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:layout_margin="10dp">
        </TextView>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_input"
            android:layout_gravity="center"
            android:layout_margin="10dp">

        </com.google.android.material.textfield.TextInputEditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_gravity="center">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/god">
            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/god_input"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mes">
            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mes_input"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:inputType="number"></com.google.android.material.textfield.TextInputEditText>



        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next_button"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:onClick="homeActivity">
        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>