<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recycling.Home"
    android:background="@color/background">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/icon_menu"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        app:menu="@menu/icon_menu"
        android:background="@color/background"
        app:labelVisibilityMode="labeled">
    </com.google.android.material.bottomnavigation.BottomNavigationView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="6dp"
            android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="20dp"
                    android:foreground="@drawable/logo"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp">
                </ImageView>



            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/newsIcon"
                        android:layout_width="260dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/news_img"
                        android:gravity="center_horizontal"
                        android:paddingTop="50dp"
                        android:text="@string/news"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/recommendationsIcon"
                        android:layout_width="260dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="17dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/recommendations_img"
                        android:gravity="center_horizontal"
                        android:paddingTop="50dp"
                        android:text="@string/recommendations"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/careInteresting"
                        android:layout_width="260dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="17dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/hint_img"
                        android:gravity="center_horizontal"
                        android:paddingTop="40dp"
                        android:text="@string/interesting"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"></TextView>


                </LinearLayout>
            </HorizontalScrollView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kormIcon"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/food_img"
                    android:gravity="center_horizontal"
                    android:paddingTop="125dp"
                    android:text="@string/korm"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/speakIcon"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/speak_img"
                    android:gravity="center_horizontal"
                    android:paddingTop="125dp"
                    android:text="@string/speak"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cageIcon"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/cage_img"
                    android:gravity="center_horizontal"
                    android:paddingTop="125dp"
                    android:text="@string/cage"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/trainingIcon"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/care_img"
                    android:gravity="center_horizontal"
                    android:paddingTop="125dp"
                    android:text="@string/training"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/healthIcon"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/health_img"
                    android:gravity="center_horizontal"
                    android:paddingTop="125dp"
                    android:text="@string/health"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/gameIcon"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/games_img"
                    android:gravity="center_horizontal"
                    android:paddingTop="125dp"
                    android:text="@string/game"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"></TextView>


        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>